--- a/dss.html
+++ b/dss.html
@@ -1,21 +1,23 @@
-<dl id='home-slide' class='dss'>
+<dl id='dss-slide' class='dss'>
     <dt><a href='#' title='' ><img src='image-1.jpg' alt='' /></a></dt>
         <dd><p>This is a caption.</p></dd>
+    <dt><a href='#' title='' ><img src='image-2.jpg' alt='' /></a></dt>
+        <dd><p>Two for good measure.</p></dd>
 </dl>
 
 <script src='dss-min.js' type='text/javascript' ></script>
 <script type='text/javascript' >
 //<![CDATA[
-var s = dss('home-slide',{
+var s = dss('dss-slide',{
     'new-slides' : [
-        {'content' :
-          "<a href='#' title='' ><img src='image-2.jpg' alt='' /></a>",
-        'caption' : 
-          '<p>another caption to boot!</p>'},
         {'content' :
           "<a href='#' title='' ><img src='image-3.jpg' alt='' /></a>",
         'caption' : 
-          '<p>Wowee! Three slides!</p>'}
+          '<p>another caption to boot!</p>'},
+        {'content' :
+          "<a href='#' title='' ><img src='image-4.jpg' alt='' /></a>",
+        'caption' : 
+          '<p>Wowee! Four slides!</p>'}
     ]
 });
 //]]>
